// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Widget should render {"readOnly":false,"isSelected":false,"isUrl":false} correctly 1`] = `
<div>
  <div
    data-mocked="EditableStyledText"
  >
    {"readOnly":false,"isSelected":false,"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":false,"value":"abc"}}
  </div>
</div>
`;

exports[`Text Widget should render {"readOnly":false,"isSelected":false,"isUrl":true} correctly 1`] = `
<div>
  <div
    data-mocked="EditableTextLink"
  >
    {"readOnly":false,"isSelected":false,"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":true,"value":"abc"}}
  </div>
</div>
`;

exports[`Text Widget should render {"readOnly":false,"isSelected":true,"isUrl":false} correctly 1`] = `
<div>
  <div
    data-mocked="EditableStyledText"
  >
    {"readOnly":false,"isSelected":true,"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":false,"value":"abc"}}
  </div>
</div>
`;

exports[`Text Widget should render {"readOnly":false,"isSelected":true,"isUrl":true} correctly 1`] = `
<div>
  <div
    data-mocked="EditableTextLink"
  >
    {"readOnly":false,"isSelected":true,"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":true,"value":"abc"}}
  </div>
</div>
`;

exports[`Text Widget should render {"readOnly":true,"isSelected":false,"isUrl":false} correctly 1`] = `
<div>
  <div
    data-mocked="StyledText"
  >
    {"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":false,"value":"abc"}}
  </div>
</div>
`;

exports[`Text Widget should render {"readOnly":true,"isSelected":false,"isUrl":true} correctly 1`] = `
<div>
  <div
    data-mocked="TextLink"
  >
    {"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":true,"value":"abc"}}
  </div>
</div>
`;

exports[`Text Widget should render {"readOnly":true,"isSelected":true,"isUrl":false} correctly 1`] = `
<div>
  <div
    data-mocked="StyledText"
  >
    {"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":false,"value":"abc"}}
  </div>
</div>
`;

exports[`Text Widget should render {"readOnly":true,"isSelected":true,"isUrl":true} correctly 1`] = `
<div>
  <div
    data-mocked="TextLink"
  >
    {"id":"some-id","x":1,"y":2,"z":3,"height":100,"width":100,"type":"text-widget","properties":{"isUrl":true,"value":"abc"}}
  </div>
</div>
`;
